fix:新增数组，快速排序和冒泡排序 方法

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yangtao-js",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "description": "A JavaScript utility library , JavaScript 实用工具库",
   "main": "src/index.js",
   "scripts": {
@@ -20,8 +20,7 @@
   "keywords": [
     "JavaScript",
     "utils",
-    "yangtao-js",
-    "warbler-fe"
+    "yangtao-js"
   ],
   "repository": {
     "type": "git",
